--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to Slot Machine App!
-  </h1>
+<div class="app-container">
+  <h1>Welcome to Slot Machine App!</h1>
   <app-sentence-generator></app-sentence-generator>
 </div>
