--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
-div{
-  background-color: red;
+.app-container {
+  text-align: center;
+  padding: 20px;
+}
+
+h1 {
+  font-family: 'Arial', sans-serif;
+  font-size: 2.5rem;
+  color: #333;
+  margin-bottom: 30px;
 }
