--- a/src/app/sentence-generator/sentence-generator.component.html
+++ b/src/app/sentence-generator/sentence-generator.component.html
@@ -1,24 +1,33 @@
 <div class="slot-machine">
-  <div class="slot" [class.invalid]="invalidSentence">
-    <div class="slot-content">{{ randomArticle }}</div>
+  <div class="game-description">
+    <h2>How to Play</h2>
+    <p>
+      Welcome to the Slot Machine App! Press the “Spin” button to generate random phrases. The goal of this game is to help you practice and learn how to formulate English sentences. Sometimes, you might get a coherent sentence, and other times, you might get a funny and random sequence of words. In case the squares are not filled with the words you have to form the correct sentence or try to do so. Have fun spinning and learning!
+    </p>
   </div>
-  <div class="slot" [class.invalid]="invalidSentence">
-    <div class="slot-content">{{ randomAdjective }}</div>
+  <div class="slots-container">
+    <div class="slot" [class.invalid]="invalidSentence">
+      <div class="slot-content">{{ randomArticle }}</div>
+    </div>
+    <div class="slot" [class.invalid]="invalidSentence">
+      <div class="slot-content">{{ randomAdjective }}</div>
+    </div>
+    <div class="slot" [class.invalid]="invalidSentence">
+      <div class="slot-content">{{ randomNoun }}</div>
+    </div>
+    <div class="slot" [class.invalid]="invalidSentence">
+      <div class="slot-content">{{ randomVerb }}</div>
+    </div>
+    <div class="slot" [class.invalid]="invalidSentence">
+      <div class="slot-content">{{ randomPreposition }}</div>
+    </div>
+    <div class="slot" [class.invalid]="invalidSentence">
+      <div class="slot-content">{{ randomPronounObject }}</div>
+    </div>
   </div>
-  <div class="slot" [class.invalid]="invalidSentence">
-    <div class="slot-content">{{ randomNoun }}</div>
+  <div class="controls">
+    <button (click)="generateRandomSentence()">Spin</button>
+    <button (click)="clearFields()">Clear</button>
   </div>
-  <div class="slot" [class.invalid]="invalidSentence">
-    <div class="slot-content">{{ randomVerb }}</div>
-  </div>
-  <div class="slot" [class.invalid]="invalidSentence">
-    <div class="slot-content">{{ randomPreposition }}</div>
-  </div>
-  <div class="slot" [class.invalid]="invalidSentence">
-    <div class="slot-content">{{ randomPronounObject }}</div>
-  </div>
-  <button (click)="generateRandomSentence()">Spin</button>
-  <p>{{nombre}}</p>
-  <button (click)="clearFields()">Clear</button>
   <p class="result">Result: {{ sentence }}</p>
 </div>
